# pypi-stats

./: .pre-commit-config.yaml  README.md  README.rst  pypi_stats.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
src/: pypi_stats.py
src/pypi_stats/: __init__.py  __main__.py
