[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypi-stats"
dynamic = ["version"]
description = "Show download stats for PyPI packages"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "pypi-stats@varonathe.org" }
]

keywords = [
    "pypi",
    "pypistats",
]

classifiers = [
    "Private :: Keep Off PyPI",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "click >= 7.0",
    "pypistats ~= 1.0",
    "txtble ~= 0.11",
]

[project.scripts]
pypi-stats = "pypi_stats:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/pypi-stats"
"Bug Tracker" = "https://github.com/jwodder/pypi-stats/issues"

[tool.hatch.version]
path = "pypi_stats.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/pypi_stats.py",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"
