[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypi-stats"
dynamic = ["version"]
description = "Show download stats for PyPI packages"
readme = "README.rst"
requires-python = ">=3.11"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "pypi-stats@varonathe.org" }
]

keywords = [
    "pypi",
    "pypistats",
]

classifiers = [
    "Private :: Keep Off PyPI",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

dependencies = [
    "click >= 7.0",
    "pypistats ~= 1.0",
    "txtble ~= 0.11",
]

[project.scripts]
pypi-stats = "pypi_stats:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/pypi-stats"
"Bug Tracker" = "https://github.com/jwodder/pypi-stats/issues"

[tool.hatch.version]
path = "src/pypi_stats/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pypistats.*"
ignore_missing_imports = true
