[metadata]
name = pypi-stats
version = attr:pypi_stats.__version__
description = Show download stats for PyPI packages
long_description = file:README.md
long_description_content_type = text/markdown; variant=GFM
author = John Thorvald Wodder II
author_email = pypi-stats@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/pypi-stats

keywords =
    ###

classifiers =
    Private :: Keep Off PyPI
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    ###

project_urls =
    Source Code = https://github.com/jwodder/pypi-stats
    Bug Tracker = https://github.com/jwodder/pypi-stats/issues

[options]
py_modules = pypi_stats
package_dir =
    =src
include_package_data = True
python_requires = ~=3.6
install_requires =
    click >= 7.0
    pypistats ~= 1.0
    txtble ~= 0.11

[options.entry_points]
console_scripts =
    pypi-stats = pypi_stats:main
